--- a/MAAF YA SAYANG/index.html.html
+++ b/MAAF YA SAYANG/index.html.html
@@ -19,8 +19,16 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `haii sayangg nya mamass
+      maaf yaa udaa bikin kamu bdmood
+      sayanggg jangan badmood muluu yaa
+      mass sayangg samaa kmuuu
+      kitaa baikann yaa sayanggg
+      bobo yang nyenyak yaa 
+      goood nightt and sweet dreams sayanggg
+      semogaa besok pagii udaa mood lagii yaa
+      atapuuuu bocill kematiann`;
+      musik = `Musik.mp3.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
