--- a/SURTI SAYANGG/index.html.html
+++ b/SURTI SAYANGG/index.html.html
@@ -27,7 +27,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       good night and sweet dreams sayanggg
       semogaa besok mood nya balik lagi yaa
       atapuuu sayangggg`;
-      musik = `Musik.mp3.mp3`;
+      musik = `Musik.mp3.`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
