--- a/maaf yaa/Flower.html
+++ b/maaf yaa/Flower.html
@@ -19,8 +19,15 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `haii sayangg nya mamass
+      masii ngambek samaa mamas?
+      jangan ngambek mulu ssayangg ntar di gigit dino
+      mass minta maaf yaa udah bikin kamu bdmood sayangg
+      selamatt boboo sayanggkuu
+      good night and sweet dreams sayanggg
+      semogaa besok mood nya balik lagi yaa
+      atapuuu sayangggg`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
