--- a/atapu sayang/index.html
+++ b/atapu sayang/index.html
@@ -19,8 +19,11 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `haii sayanggku
+      selamat pagii
+      semangatt buat hari ini yaa
+      atapuuu sayangggg`;
+      musik = `musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
