--- a/atapu sayang/index.html
+++ b/atapu sayang/index.html
@@ -21,7 +21,23 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     <script>
       ucapan = `haii sayanggku
       selamat pagii
-      semangatt buat hari ini yaa
+      semangat buat hari ini yaa
+      maaf kalo mass sering bikin kamu bdmood
+      sering jail ke kamu
+      susah buat di bilangin
+      tapi mass sayang sama kamuu
+      kamu lucu tau kalo prengat prengut
+      tapi ga lucu klo uda marah terus susah di bujuk
+      maaf yaa masii banyak yang belum mas usahain buat kamu
+      tapi mas usahain buat jadi lebih baik lagi
+      makasii ya udahh hadir di hidup mas
+      ngajakin mas rndom
+      mau jadi tempat mas manja"
+      mau nerima kurang nya mass
+      sayangg sehat selalu yaa
+      semogaa allah lebih mempermudah hidup kmu setelah ini
+      kamu harus happy yaa
+      jangan sedih ada mass di sini
       atapuuu sayangggg`;
       musik = `musik.mp3`;
       nomorWhatsapp = ``;
